[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/main-menu.gd" type="Script" id=1]
[ext_resource path="res://tiles/decor.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/tiles/tilemap_decals.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/character.tscn" type="PackedScene" id=4]
[ext_resource path="res://themes/theme.tres" type="Theme" id=5]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=6]
[ext_resource path="res://textures/ui/close.png" type="Texture" id=7]
[ext_resource path="res://textures/ui/close-pressed.png" type="Texture" id=8]
[ext_resource path="res://scenes/background.tscn" type="PackedScene" id=9]
[ext_resource path="res://textures/bg/02.png" type="Texture" id=10]

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="Particles" type="Node2D" parent="."]

[node name="Decor" type="TileMap" parent="."]
modulate = Color( 0.341176, 0.305882, 0.301961, 1 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 131084, 2, 0, 131088, 0, 0, 131095, 0, 0, 131098, 2, 0, 131102, 8, 0, 196617, 8, 0, 196626, 1, 0, 196635, 1, 0, 196636, 1, 0, 196638, 8, 0, 262153, 8, 0, 262156, 4, 0, 262159, 0, 0, 262166, 2, 0, 262172, 1, 0, 262174, 8, 0, 327689, 8, 0, 327696, 3, 0, 327702, 3, 0, 327703, 5, 0, 327707, 1, 0, 327710, 8, 0, 393216, -1073741816, 0, 393217, -1073741816, 0, 393218, -1073741816, 0, 393219, -1073741816, 0, 393220, -1073741816, 0, 393221, -1073741816, 0, 393222, -1073741816, 0, 393223, -1073741816, 0, 393224, -1073741816, 0, 393225, -1073741814, 0, 393226, -1073741816, 0, 393227, -1610612728, 0, 393228, -1610612728, 0, 393229, -1610612728, 0, 393230, -1610612728, 0, 393231, -1610612728, 0, 393232, -1610612728, 0, 393233, -1610612728, 0, 393234, -1610612728, 0, 393235, -1610612727, 0, 393236, -2147483639, 0, 393237, -1610612728, 0, 393238, -1610612728, 0, 393239, -1610612728, 0, 393240, -1610612728, 0, 393241, -1610612728, 0, 393242, -1610612728, 0, 393243, -1610612728, 0, 393244, -1610612728, 0, 393245, -1073741816, 0, 393246, -1073741814, 0, 393247, -1073741816, 0, 393248, -1073741816, 0, 393249, -1073741816, 0, 393250, -1073741816, 0, 393251, -1073741816, 0, 393252, -1073741816, 0, 393253, -1073741816, 0, 393254, -1073741816, 0, 393255, -1073741816, 0, 458771, 1610612744, 0, 655373, 1610612742, 0, 655374, 1610612741, 0, 851974, -536870911, 0, 851996, 1610612740, 0, 917509, -536870911, 0, 917510, -536870909, 0, 917511, -536870911, 0, 983055, -536870911, 0, 983056, -536870911, 0, 983078, 1610612739, 0, 1048591, -536870911, 0, 1048592, -536870911, 0, 1048602, 1610612738, 0, 1048605, 1610612737, 0, 1114126, 1073741824, 0, 1114127, -536870912, 0, 1114128, -536870909, 0, 1114129, -536870912, 0, 1114138, 1610612738, 0, 1179661, 1073741824, 0, 1179662, -2147483648, 0, 1179664, 5, 0, 1179666, -536870911, 0, 1245191, 1610612743, 0, 1245196, 536870912, 0, 1245197, -2147483648, 0, 1245198, 536870912, 0, 1245203, -536870912, 0, 1310731, 536870912, 0, 1310732, -2147483648, 0, 1310733, 536870912, 0, 1310738, -536870911, 0, 1310739, -536870911, 0, 1310740, -536870911, 0, 1310749, 1610612739, 0, 1376259, -536870910, 0, 1376260, -536870909, 0, 1376266, 536870912, 0, 1376267, -2147483648, 0, 1376268, 536870912, 0, 1376272, -536870907, 0, 1376273, -536870909, 0, 1376274, -536870909, 0, 1376276, 2, 0, 1376277, -536870912, 0, 1376286, 1610612737, 0, 1441794, -536870908, 0, 1441795, -536870910, 0, 1441801, 536870912, 0, 1441802, -2147483648, 0, 1441803, 536870912, 0, 1441808, -536870912, 0, 1441809, -536870911, 0, 1441810, -536870911, 0, 1441811, -536870912, 0, 1441812, -536870911, 0, 1441814, -536870911, 0, 1507328, 4, 0, 1507333, 5, 0, 1507338, 3, 0, 1507342, 3, 0, 1507343, 3, 0, 1507354, 3, 0, 1507356, 4, 0, 1507357, 5, 0, 1507366, 1, 0, 1507367, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Platforms" parent="." instance=ExtResource( 3 )]
self_modulate = Color( 0.615686, 0.0745098, 0.121569, 1 )
position = Vector2( -0.840881, 0 )
tile_data = PoolIntArray( 131083, 17, 0, 131084, 16, 0, 131088, 22, 0, 131089, 1610612758, 0, 131094, 22, 0, 131095, 1610612755, 0, 131096, 1610612758, 0, 131098, -1073741807, 0, 196621, 16, 0, 196623, -1610612714, 0, 196626, 1610612753, 0, 196629, 17, 0, 196634, -1610612717, 0, 196637, -1610612719, 0, 262154, -1610612719, 0, 262157, 17, 0, 262159, -1610612717, 0, 262162, 1610612752, 0, 262166, 22, 0, 262167, 1610612758, 0, 262170, -1073741805, 0, 262173, -1610612719, 0, 327690, -1610612719, 0, 327691, 22, 0, 327692, 1610612758, 0, 327693, -1073741807, 0, 327695, -1610612717, 0, 327697, 17, 0, 327704, 1610612753, 0, 327706, -1610612717, 0, 327707, -1073741808, 0, 327708, -1073741807, 0, 327709, -1610612719, 0, 393226, -1610612719, 0, 393229, -1073741808, 0, 393231, -1073741807, 0, 393234, 17, 0, 393240, 1610612753, 0, 393242, -1073741805, 0, 393245, -1610612719, 0, 458762, -1610612719, 0, 458765, 1610612753, 0, 458767, 1073741842, 0, 458770, 1610612753, 0, 458773, 1610612753, 0, 458774, 1073741842, 0, 458775, 1610612753, 0, 458778, -1073741802, 0, 458781, -1610612719, 0, 524298, -1610612719, 0, 524317, -1610612719, 0, 589834, -1610612719, 0, 589853, -1610612719, 0, 983055, 3, 0, 983056, 536870917, 0, 1048591, -1073741822, 0, 1048592, -536870912, 0, 1114126, 3, 0, 1114127, -1073741824, 0, 1114128, 15, 0, 1114129, -1610612731, 0, 1179661, 3, 0, 1179662, -1073741809, 0, 1179663, -1073741824, 0, 1179665, 15, 0, 1179666, -1610612733, 0, 1245196, 3, 0, 1245197, -1073741809, 0, 1245199, -1073741824, 0, 1245202, 15, 0, 1245203, -1610612732, 0, 1310731, 3, 0, 1310732, -1073741809, 0, 1310734, 3, 0, 1310735, -1073741809, 0, 1310739, 15, 0, 1310740, -1610612733, 0, 1376266, 3, 0, 1376267, -1073741809, 0, 1376269, 4, 0, 1376270, -1073741809, 0, 1376276, 15, 0, 1376277, -1610612733, 0, 1441801, 3, 0, 1441802, -1073741809, 0, 1441804, 3, 0, 1441805, -1073741809, 0, 1441813, 15, 0, 1441814, -1610612733, 0, 1507328, 0, 0, 1507329, 0, 0, 1507330, 0, 0, 1507331, 0, 0, 1507332, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507338, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1507341, 0, 0, 1507342, 0, 0, 1507343, 0, 0, 1507344, 0, 0, 1507345, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1507348, 0, 0, 1507349, 0, 0, 1507350, 0, 0, 1507351, 0, 0, 1507352, 0, 0, 1507353, 0, 0, 1507354, 0, 0, 1507355, 0, 0, 1507356, 0, 0, 1507357, 0, 0, 1507358, 0, 0, 1507359, 0, 0, 1507360, 0, 0, 1507361, 0, 0, 1507362, 0, 0, 1507363, 0, 0, 1507364, 0, 0, 1507365, 0, 0, 1507366, 0, 0, 1507367, 0, 0 )

[node name="Character" parent="." instance=ExtResource( 4 )]
position = Vector2( 514.477, 463.518 )
is_dummy = true

[node name="Fountains" type="Node2D" parent="."]

[node name="Pipe1" type="Node2D" parent="Fountains"]
position = Vector2( 975.861, 59.4686 )

[node name="Pipe2" type="Node2D" parent="Fountains"]
position = Vector2( 304.245, 91.2386 )

[node name="Controls" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="ToggleFullscreen" type="CheckBox" parent="Controls"]
margin_left = 21.408
margin_top = 15.3569
margin_right = 115.408
margin_bottom = 39.3569
focus_mode = 0
enabled_focus_mode = 0
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditNickname" type="LineEdit" parent="Controls"]
margin_left = 354.0
margin_top = 374.0
margin_right = 538.0
margin_bottom = 398.0
text = "Player"
max_length = 14
context_menu_enabled = false
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckAimRay" type="CheckBox" parent="Controls"]
margin_left = 425.609
margin_top = 493.439
margin_right = 449.609
margin_bottom = 517.439
shortcut_in_tooltip = false
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderBotAmount" type="HSlider" parent="Controls"]
margin_left = 721.0
margin_top = 370.0
margin_right = 907.0
margin_bottom = 397.0
max_value = 8.0
value = 3.0
rounded = true
tick_count = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderBotReaction" type="HSlider" parent="Controls"]
margin_left = 721.0
margin_top = 415.0
margin_right = 907.0
margin_bottom = 442.0
max_value = 1.0
step = 0.1
value = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinFragsLimit" type="SpinBox" parent="Controls"]
margin_left = 813.0
margin_top = 452.0
margin_right = 904.0
margin_bottom = 481.0
min_value = 1.0
max_value = 1000.0
value = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinTimeLimit" type="SpinBox" parent="Controls"]
margin_left = 813.0
margin_top = 490.0
margin_right = 904.0
margin_bottom = 519.0
min_value = 1.0
max_value = 120.0
value = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinLevel" type="SpinBox" parent="Controls"]
margin_left = 812.0
margin_top = 527.0
margin_right = 904.0
margin_bottom = 556.0
min_value = 1.0
max_value = 2.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelNickname" type="Label" parent="Controls"]
margin_left = 355.0
margin_top = 355.0
margin_right = 423.0
margin_bottom = 369.0
text = "Nickname:"

[node name="LabelBotAmount" type="Label" parent="Controls"]
margin_left = 723.0
margin_top = 355.0
margin_right = 802.0
margin_bottom = 369.0
text = "Bot amount:"

[node name="LabelBotReaction" type="Label" parent="Controls"]
margin_left = 723.0
margin_top = 397.0
margin_right = 811.0
margin_bottom = 416.0
text = "Bot reaction::"

[node name="LabelSkin" type="Label" parent="Controls"]
margin_left = 386.0
margin_top = 428.0
margin_right = 419.0
margin_bottom = 442.0
text = "Skin:"

[node name="LabelHelment" type="Label" parent="Controls"]
margin_left = 356.0
margin_top = 449.0
margin_right = 416.0
margin_bottom = 463.0
text = "Helment:"

[node name="LabelVest" type="Label" parent="Controls"]
margin_left = 384.0
margin_top = 472.0
margin_right = 420.0
margin_bottom = 486.0
text = "Vest:"

[node name="LabelFragsLimit" type="Label" parent="Controls"]
margin_left = 727.0
margin_top = 457.0
margin_right = 808.0
margin_bottom = 476.0
text = "Frags limit:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTimeLimit" type="Label" parent="Controls"]
margin_left = 727.0
margin_top = 494.0
margin_right = 802.0
margin_bottom = 513.0
text = "Time limit:"

[node name="ButtonPlay" type="Button" parent="Controls"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 171.918
margin_top = -195.339
margin_right = 251.918
margin_bottom = -155.339
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
shortcut_in_tooltip = false
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonQuit" type="TextureButton" parent="Controls"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -54.5244
margin_top = 25.0261
margin_right = -30.5244
margin_bottom = 50.0261
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="LabelLevel" type="Label" parent="Controls"]
margin_left = 728.0
margin_top = 533.0
margin_right = 781.0
margin_bottom = 552.0
text = "Level:"

[node name="PickerSkin" type="ColorPickerButton" parent="Controls"]
margin_left = 422.0
margin_top = 424.0
margin_right = 454.0
margin_bottom = 444.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
color = Color( 1, 1, 1, 1 )
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickerHelmet" type="ColorPickerButton" parent="Controls"]
margin_left = 422.0
margin_top = 446.0
margin_right = 454.0
margin_bottom = 466.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
color = Color( 0.803922, 0.603922, 0.0117647, 1 )
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickerVest" type="ColorPickerButton" parent="Controls"]
margin_left = 422.0
margin_top = 468.0
margin_right = 454.0
margin_bottom = 488.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
color = Color( 0.339844, 0.213582, 0.0557556, 1 )
edit_alpha = false

[node name="LabelAimRay" type="Label" parent="Controls"]
margin_left = 360.794
margin_top = 497.828
margin_right = 416.794
margin_bottom = 511.828
text = "Aim Ray:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 9 )]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
texture = ExtResource( 10 )

[connection signal="pressed" from="Controls/ToggleFullscreen" to="." method="_on_ToggleFullscreen_pressed"]
[connection signal="pressed" from="Controls/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="Controls/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
[connection signal="color_changed" from="Controls/PickerSkin" to="." method="_on_PickerSkin_color_changed"]
[connection signal="color_changed" from="Controls/PickerHelmet" to="." method="_on_PickerHelmet_color_changed"]
[connection signal="color_changed" from="Controls/PickerVest" to="." method="_on_PickerVest_color_changed"]
